feat(i18n): add missing translation strings
- Add homepage translations (discoverServices, viewPricing, etc.)
- Add error page translations (pageNotFound, backToHome, etc.)
- Add common translations (menu, hours, instagram)
- Update both French and English translation files

Refs: Task 3

--- a/pause-urbaine-website/i18n/fr.yaml
+++ b/pause-urbaine-website/i18n/fr.yaml
@@ -18,6 +18,24 @@ common:
   phone: Téléphone
   address: Adresse
   email: Email
+  menu: Menu
+  hours: Horaires
+  instagram: Instagram
+  
+homepage:
+  discoverServices: Découvrir nos services
+  viewPricing: Voir les tarifs
+  ourSalons: Nos salons
+  latestNews: Actualités
+
+error:
+  pageNotFound: Page non trouvée
+  pageNotFoundMessage: Désolé, la page que vous recherchez n'existe pas.
+  backToHome: Retour à l'accueil
+  quickLinks: Liens rapides
+
+footer_text:
+  allRightsReserved: Tous droits réservés
   
 locations:
   plainpalais: Plainpalais
