--- a/pause-urbaine-website/i18n/en.yaml
+++ b/pause-urbaine-website/i18n/en.yaml
@@ -18,6 +18,24 @@ common:
   phone: Phone
   address: Address
   email: Email
+  menu: Menu
+  hours: Hours
+  instagram: Instagram
+  
+homepage:
+  discoverServices: Discover our services
+  viewPricing: View pricing
+  ourSalons: Our salons
+  latestNews: Latest news
+
+error:
+  pageNotFound: Page not found
+  pageNotFoundMessage: Sorry, the page you are looking for does not exist.
+  backToHome: Back to home
+  quickLinks: Quick links
+
+footer_text:
+  allRightsReserved: All rights reserved
   
 locations:
   plainpalais: Plainpalais
