fix(footer): remove duplicate copyright text
- Update i18n files to only contain rights reserved text
- Add dynamic year in footer template
- Remove duplication of copyright notice

Refs: Task 13

--- a/pause-urbaine-website/i18n/en.yaml
+++ b/pause-urbaine-website/i18n/en.yaml
@@ -10,7 +10,7 @@ footer:
   follow_us: Follow us
   opening_hours: Opening hours
   locations: Our salons
-  copyright: © 2026 Pause Urbaine. All rights reserved.
+  copyright: All rights reserved.
 
 common:
   read_more: Read more
