--- a/pause-urbaine-website/i18n/fr.yaml
+++ b/pause-urbaine-website/i18n/fr.yaml
@@ -10,7 +10,7 @@ footer:
   follow_us: Suivez-nous
   opening_hours: Horaires d'ouverture
   locations: Nos salons
-  copyright: © 2026 Pause Urbaine. Tous droits réservés.
+  copyright: Tous droits réservés.
 
 common:
   read_more: Lire la suite
