feat(locations): add Google Maps links to addresses and location pins
- Add maps_url field to both locations in locations.yaml
- Make location card addresses clickable with Google Maps links
- Make header location pins clickable with Google Maps links
- Add i18n translations for "view_on_maps"
- Add hover styles for clickable location elements

--- a/pause-urbaine-website/i18n/en.yaml
+++ b/pause-urbaine-website/i18n/en.yaml
@@ -21,6 +21,7 @@ common:
   menu: Menu
   hours: Hours
   instagram: Instagram
+  view_on_maps: View on Google Maps
   
 homepage:
   discoverServices: Discover our services
