--- a/pause-urbaine-website/i18n/fr.yaml
+++ b/pause-urbaine-website/i18n/fr.yaml
@@ -21,6 +21,7 @@ common:
   menu: Menu
   hours: Horaires
   instagram: Instagram
+  view_on_maps: Voir sur Google Maps
   
 homepage:
   discoverServices: Découvrir nos services
